Baseline: research.html truth-hardening and FeatureTracker sync

--- a/field_notes/research.html
+++ b/field_notes/research.html
@@ -86,82 +86,82 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <!-- Foundational Scaling -->
                     <tr>
                         <td><a href="https://arxiv.org/abs/2602.01566" target="_blank" class="anchor-link">FS-Researcher [FEAT-095]</a></td>
                         <td>Dual-Agent: Context Builder + Report Writer scaling for long-horizon memory.</td>
-                        <td><code>nibble_v2.py</code> (Context) & Web Intercom (Report) via durable File-System RAG.</td>
+                        <td>Semantic Mapping (Layered RAG) utilizing ChromaDB for strategic anchors.</td>
                         <td><span class="impact-badge impact-live">Live</span></td>
                     </tr>
                     <tr>
-                        <td><a href="https://arxiv.org/abs/2601.22628" target="_blank" class="anchor-link">TTCS [FEAT-114]</a></td>
+                        <td><a href="https://arxiv.org/abs/2601.22628" target="_blank" class="anchor-link">TTCS / Curriculum [FEAT-114]</a></td>
                         <td>Test-Time Curriculum: Synthesize-then-Solve loops for higher reasoning quality.</td>
-                        <td><code>CurriculumEngine</code> in <code>ai_engine_v2.py</code> processing 18 years of logs.</td>
+                        <td>Designed to process 18 years of technical history via <code>ai_engine_v2.py</code>.</td>
                         <td><span class="impact-badge impact-live">Live</span></td>
                     </tr>
                     <tr>
                         <td>Apple CLaRa [FEAT-073]</td>
                         <td>Semantic Compression: 16x-128x density for long-term retention.</td>
-                        <td><code>SemanticCondenser</code> compressing tactical logs into high-fidelity abstracts.</td>
+                        <td><code>SemanticCondenser</code> for log-to-insight synthesis during Dreaming.</td>
                         <td><span class="impact-badge impact-live">Live</span></td>
                     </tr>
                     <tr>
                         <td>Agentic-R [FEAT-080]</td>
                         <td>Learning to Retrieve: Utility-based ranking for autonomous memory lookup.</td>
-                        <td><code>ArchiveMemory</code> tool-kit allowing Pinky to follow technical breadcrumbs.</td>
-                        <td><span class="impact-badge impact-live">Live</span></td>
+                        <td>Dynamically re-ranking historical context based on reasoning utility.</td>
+                        <td><span class="impact-badge impact-live">Active</span></td>
                     </tr>
                     <tr>
-                        <td>3x3 CVT Builder [FEAT-088]</td>
-                        <td>High-Density Career Indexing: Correlating scars with strategic Focal goals.</td>
-                        <td>Signature resume synthesis tool extracting Diamond artifacts from raw notes.</td>
-                        <td><span class="impact-badge impact-live">Live</span></td>
+                        <td>Semantic Career Recall [FEAT-088]</td>
+                        <td>Vector-based Historical Grounding: Querying 18 years of truth via natural language.</td>
+                        <td>Bridging 18 years of technical scars with strategic Focal goals.</td>
+                        <td><span class="impact-badge impact-live">Active</span></td>
                     </tr>
                     <tr>
                         <td>Internal Debate [FEAT-071]</td>
                         <td>Moderated Consensus: Dueling independent reasoning paths to reduce hallucinations.</td>
-                        <td>Implemented in v3.1.9 for high-stakes architectural decision making.</td>
+                        <td>Multi-agent collaboration for high-stakes architectural decision making.</td>
                         <td><span class="impact-badge impact-live">Live</span></td>
                     </tr>
                     <tr>
                         <td>Dreaming Cycle [FEAT-067]</td>
                         <td>Subconscious Consolidation: Multi-host batch processing during idle cycles.</td>
-                        <td><code>dream_cycle.py</code> moving chat logs to Long-Term Wisdom (Linux -> 4090).</td>
+                        <td>Automated movement of chat logs to Long-Term Wisdom (Linux -> 4090).</td>
                         <td><span class="impact-badge impact-live">Live</span></td>
                     </tr>
                     <tr>
                         <td>Liger-Kernel [FEAT-031]</td>
                         <td>VRAM Optimization: Fused kernels for efficient inference on consumer hardware.</td>
-                        <td>Achieved 80% VRAM reduction on RTX 2080 Ti for 14B+ model capability.</td>
+                        <td>Maximizing 8B residency and enabling 14B testing on 11GB silicon.</td>
                         <td><span class="impact-badge impact-stable">Stable</span></td>
                     </tr>
                     <tr>
                         <td>Unified Diffs [FEAT-115]</td>
-                        <td>Robust Agentic Editing: Avoiding string-replacement collisions.</td>
+                        <td>Robust Agentic Editing: Moving away from string-replacement collisions.</td>
                         <td><code>patch_file</code> tool in Archive Node for granular workspace updates.</td>
                         <td><span class="impact-badge impact-live">Live</span></td>
                     </tr>
                     <tr>
                         <td>SML Alignment [FEAT-083]</td>
-                        <td>Hardware instruction mismatch: Cross-platform model resolution and host-affinity.</td>
-                        <td>Characterized 333MiB "Zombie State" across 4 engines; standardizing on Ollama Unity Pattern.</td>
+                        <td>Standard Model Labeling: Cross-platform model resolution and host-affinity.</td>
+                        <td>Fixed KENDER resolution logic to prioritize 8B Sovereign models over Linux tiers.</td>
                         <td><span class="impact-badge impact-stable">Final</span></td>
+                    </tr>
+                    <!-- Overarching Sprint Goals -->
+                    <tr>
+                        <td>Observational Memory</td>
+                        <td>State-Based RAG: Transitioning from lookup to persistent "World Model".</td>
+                        <td>Incorporating real-time Lab state into the reasoning context.</td>
+                        <td><span class="impact-badge impact-design">Sprint Goal</span></td>
+                    </tr>
+                    <tr>
+                        <td>TTT-Discover</td>
+                        <td>RL-based Autonomous Validation: Finding shortest paths to silicon failure.</td>
+                        <td>Implementing reinforcement loops for autonomous discovery in the archive.</td>
+                        <td><span class="impact-badge impact-design">Sprint Goal</span></td>
                     </tr>
                 </tbody>
             </table>
-        </section>
-
-        <section id="roadmap" style="margin-top: 60px;">
-            <h2 class="section-title">The Next Horizon</h2>
-            
-            <div class="roadmap-item">
-                <div class="roadmap-title">Observational Memory (State-Based RAG)</div>
-                <div class="roadmap-desc">Transitioning from retrieval-augmented lookup to a persistent "World Model" of the Lab's state and career history.</div>
-            </div>
-
-            <div class="roadmap-item">
-                <div class="roadmap-title">TTT-Discover (RL-based Autonomous Validation)</div>
-                <div class="roadmap-desc">Implementing reinforcement learning to autonomously discover the fastest path to silicon failure states within the archive.</div>
-            </div>
         </section>
     </main>
 
